# hacktofuture4

./: .env.example  .gitignore  README.md  README_SUPABASE_IMPORT.md  init_lily02.ps1  pyproject.toml  recovery.py  recovery_log.txt  requirements.txt
.github/workflows/: lily02_pipeline.yml
automl_agentic/: README.md  export_supabase_public.py  generate_training_data.py  predict_router.py  requirements-automl.txt  train_router.py
automl_agentic/data/: train.csv
automl_agentic/exports/: feature_catalogs.csv  feature_catalogs.parquet  floats.csv  floats.parquet  measurements.csv  measurements.parquet  profiles.csv  profiles.parquet
hyperpipeline/: chat.py  execute.py  execution_engine.py  generate_training_data_v2.py  indic_translator.py  orchestrator.py  schemas.py  setup_indic.py
hyperpipeline/chunks/: __init__.py  analysis_advanced.py  automl_insight.py  domain_metrics.py  evidence.py  feature_composer.py  retrieval.py
hyperpipeline/data/: train_v2.csv
lily02_backend/: main.py
lily02_cli/: main.py
lily02_frontend/: index.html  package-lock.json  package.json
lily02_frontend/src/: App.css  App.jsx  index.css
lily02_frontend/src/components/: Sidebar.jsx
lily02_frontend/src/pages/: ChatRoom.jsx  Dashboard.jsx  DataOps.jsx  LocalInstallation.jsx
nginx/: lily02.conf
scripts/: launch_tunnel.py
scripts/database/: argo_import_supabase.py  fetch_users.py  inspect_supabase_schema.py  ollama_supabase.py
scripts/testing/: backtest_formats.py  demo.py  test_integration.py
sql/: argo_schema.sql  argo_search.sql
