[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lily02"
version = "2.1.0"
authors = [
  { name="Sampath Kumar", email="sampathkumar8421@gmail.com" },
]
description = "A premium, agentic oceanographic scientific workstation and reasoning hyperpipeline."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Oceanography",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "requests",
    "pydantic",
    "langchain",
    "langchain-openai",
    "psycopg",
    "rich",
    "click",
    "python-dotenv",
]

[project.scripts]
lily02 = "lily02_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hyperpipeline*", "lily02_cli*", "lily02_backend*"]
